HTML. Etiquetas de contenido y formulario de contacto

--- a/html/index.html
+++ b/html/index.html
@@ -15,6 +15,8 @@
         </header>
 
         <main>
+
+            <img src='./imagen.jpg' height="600" alt="" />
             <section>
                 <h2>Este es el título de una sección de noticias</h2>
                 <article>
@@ -58,9 +60,7 @@
         <footer>
             Este es el footer de la página con enlaces.
 
-            <span>Enlace 1</span>
-            <span>Enlace 2</span>
-            <span>Enlace 2</span>
+            <a href='./contacto.html'>Formulario de contacto</a>
         </footer>
 
     </body>
