--- a/ejerciciosHenry/ejercicio1_HTML/politica.html
+++ b/ejerciciosHenry/ejercicio1_HTML/politica.html
@@ -3,15 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="./styles.css" />
         <title>Deportes</title>
     </head>
 
-    <body>
+    <body class="container">
         <header>
+        <nav>
             <a href="./index.html">Portada</a>
             <a href="./deportes.html">Deportes</a>
             <a href="#">Política</a>
             <a href="./contacto.html">Contactanos</a>
+        </nav>
             <h1>POLÍTICA</h1>
             <br />
         </header>
@@ -25,7 +28,7 @@
                         <p>Consectetur, adipisicing elit. Impedit ipsum nam, itaque commodi magnam eum quo autem, consectetur esse maxime temporibus, culpa in expedita consequuntur cumque amet ipsam voluptatem voluptate!</p>
                     </div>
                 </article>
-                <hr />
+
                 <article>
                     <div>
                         <h3>Segunda notcia de política</h3>
@@ -34,7 +37,7 @@
                         <p>Consectetur, adipisicing elit. Impedit ipsum nam, itaque commodi magnam eum quo autem, consectetur esse maxime temporibus, culpa in expedita consequuntur cumque amet ipsam voluptatem voluptate!</p>
                     </div>
                 </article>
-                <hr />
+
                 <article>
                     <div>
                         <h3>Tercera notcia de política</h3>
