--- a/ejerciciosHenry/ejercicio2_CSS/index.html
+++ b/ejerciciosHenry/ejercicio2_CSS/index.html
@@ -9,7 +9,10 @@
     </head>
 
     <body class="fondo">
-        <h1>PRIMEROS ESTILOS CON CSS</h1>
-        <p class="miTexto">Esta es mi página web y le daré estilos.</p>
+        <div class="centrado">
+            <h1>PRIMEROS ESTILOS CON CSS</h1>
+            <p class="miTexto">Esta es mi página web y le daré estilos.</p>
+        </div>
+        
     </body>
 </html>
