--- a/ejerciciosHenry/ejercicio1_HTML/contacto.html
+++ b/ejerciciosHenry/ejercicio1_HTML/contacto.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
     <title>Contacto</title>
 </head>
 
-<body>
+<body class="container">
 
     <header>
         <h1>Contacto</h1>
@@ -19,16 +20,15 @@
         </div>
 
         <form action='./index.html'>
-            <div>
+            <div class="container-secundario">
                 <textarea
                 name="comentario"
                 id="comentario"
                 placeholder="Contanos lo que quieras"
                 cols="30"
                 rows="10" /></textarea>
-            </div>
-            <div>
-                <br />
+            <div class="formulario">
+            <div >
                 <label for="nombre">Nombre:</label>
                 <input type="text" id='nombre' name='nombre'/>
             </div>
@@ -47,6 +47,9 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id='password' name='password'/>
             </div>
+            
+        </div>
+        </div>
             <br /><br />
             <button>Enviar</button>
             <input type="submit" value="Volver">
