--- a/ejerciciosHenry/ejercicio1_HTML/deportes.html
+++ b/ejerciciosHenry/ejercicio1_HTML/deportes.html
@@ -3,15 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="./styles.css" />
         <title>Deportes</title>
     </head>
 
     <body>
         <header>
+        <nav>
             <a href="./index.html">Portada</a>
             <a href="#">Deportes</a>
             <a href="./politica.html">Política</a>
             <a href="./contacto.html">Contactanos</a>
+        </nav>
             <h1>DEPORTES</h1>
             <br />
         </header>
